// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches last snapshot loading 1`] = `<Loading />`;

exports[`matches last snapshot loggedIn 1`] = `
<Connect(VersionCheck)>
  <Connect(LoggedInRoot) />
</Connect(VersionCheck)>
`;

exports[`matches last snapshot not loggedIn 1`] = `
<Connect(VersionCheck)>
  <LoginNavigator />
</Connect(VersionCheck)>
`;

exports[`matches last snapshot pending 1`] = `<Loading />`;
